WIP: Save to external api.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body style="width: 350px; height: 450px">
     <h1>PC Scrapper</h1>
     <button id="test">TEST!</button>
+    <button id="saveBtn" style="display: none">Save Btn</button>
     <script src="test.js"></script>
   <table id="dataTable"></table>
   </body>
